<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_detalle_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.enzogt.birthday.DetalleContacto"
    android:gravity="center"

    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">


        <ImageButton
            android:background="@null"
            android:scaleType="centerInside"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/actualizar"
            android:id="@+id/detalleRecargar"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            android:alpha="0.5"
            android:onClick="clickRefrescarContacto"/>

        <ImageView
            android:id="@+id/imagenDetalleContacto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/anonimo_heisenberg"
            android:layout_weight="0.34"
            android:layout_gravity="center"/>

        <ImageButton
            android:background="@null"
            android:scaleType="centerInside"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/fichados"
            android:id="@+id/detalleFicha"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            android:alpha="0.5"
            android:onClick="clickVerFicha"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/lblDetalleNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="16sp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/lblDetalleNombreContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/lblDetalleFechaCumple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaCumple"
            android:textSize="16sp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/lblDetalleFechaCumpleContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:maxLines="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/lblDetalleTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/telefono"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinnerDetalleTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblDetalleMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/mensaje"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtDetalleMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:minLines="2"
        android:maxLines="3"
        android:gravity="top|left"
        android:maxLength="160"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnDetalleContactoCancelar"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickAceptar"
            android:text="@string/aceptar"
            android:textSize="13sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/btnDetalleContactoAceptar"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickCancelar"
            android:text="@string/cancelar"
            android:textSize="13sp"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/btnDetalleContactoCancelar" />

    </RelativeLayout>




</LinearLayout>
